crates/dat0-ui/tests/snapshots/visual_snapshot__pane__open.snap
---
source: crates/dat0-ui/tests/visual_snapshot.rs
expression: "rendered[0].1"
---
<div class="d0-scene" data-scene="pane/open" style="width: 1440px">
<div class="d0-pane-stack" style="width: 320px; height: 400px">
<section class="d0-pane" data-a11y-id="pane-inspector">
<button class="d0-pane-head" data-a11y-id="pane-head-inspector" aria-expanded="true">
<span class="d0-chevron">▾</span>
<span class="d0-label">inspector</span>
<span class="d0-head-title">Inspector</span>
<span class="d0-pane-meta d0-label">revenue · DOUBLE</span>
</button>
<div class="d0-pane-body" data-a11y-id="pane-body-inspector">
<p class="d0-body">twelve rows, four columns</p>
</div>
</section>
</div>
</div>
